--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "free_friends",
+  "name": "node_chat",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-
+    "uuid": "^3.1.0",
+    "md5": "^2.1.0",
+    "async": "^1.5.2",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.8",
+    "validator": "^5.1.0",
+    "xss-filters": "^1.2.6"
   }
 }
