--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.8",
     "validator": "^5.1.0",
-    "xss-filters": "^1.2.6"
+    "xss-filters": "^1.2.6",
+    "mysql": "^2.14.1"
   }
 }
