Вследствие необходимости работы с https чат переведен на express Пути сертификатов прописаны в конфигах Там же статики

--- a/config.json
+++ b/config.json
@@ -12,5 +12,10 @@
       "database": "chat_db",
       "user": "root",
       "password": "root"
-  }
+  },
+  "paths": {
+    "privkey" : "./privatekey.pem",
+    "fullchain" : "./certificate.pem"
+  },
+  "static" : "public"
 }
